Bug 413675. Incorrect menu events for ARIA dropdown menu. Patch by Alexander Surkov. r=aaronlev, a=schrep